# langchain-course-agentic-rag

./: README.md  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: __init__.py  graph.py  state.py
graph/chains/: answer_grader.py  generation.py  halucination_grader.py  retrieval_grader.py  router.py
graph/chains/tests/: test_chains.py
graph/chains/tests/.chroma/: chroma.sqlite3
graph/nodes/: __init__.py  grade_documents.py  retrieve.py  websearch.py
ingestor/: __init__.py  ingestion.py
